# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  bootstrap.sh  flake8  pyproject.toml  reset.sh  setup  setup-asdf  setup-dropbox  setup-homebrew  setup-nodejs  setup-nvm  setup-postgres  setup-python  setup-ruby  setup-uv  setup-vim  setup-zsh  setup-zsh-history  setup.sh  skills-lock.json  utils.sh  vimrc
.claude/: settings.local.json
.config/tmux-powerline/.claude/: settings.local.json
.github/hooks/: dcg.json
docs/: migration-test.md
docs/plans/: 2026-05-06-private-repo-hybrid-design.md
dotfiles_scripts/: check_home_symlinks.py  check_homebrew.py  check_private_repo.py  detach_cloud_cache.py  dotfiles_doctor.py  export_ssh_to_private_dotfiles.py  migrate_to_gdrive.py  op_ssh.py  pull_ssh_keys_from_op.py  setup.py  setup_coding_tools.py  setup_device_id.py  setup_dropbox.py  setup_fzf.py  setup_gpg.py  setup_gstack.py  setup_homebrew.py  setup_launchd.py  setup_macos.py  setup_mise.py  setup_neovim.py  setup_postgres.py  setup_private_hook.py  setup_private_repo.py  setup_ssh_identity.py  setup_utils.py  setup_vim.py  setup_zsh.py  setup_zsh_history.py  symlink_home.py  sync_private_runtime.py  utils.py
git/: gitconfig  gitignore
home/: .fdignore  .gitconfig  .gitignore  .p10k-ssh.zsh  .p10k.zsh  .tmux-ssh.conf  .tmux.conf  .tool-versions  .wezterm.lua  .zsh_plugins.txt  .zshrc
home/.config/karabiner/: karabiner.json
home/.config/mise/: config.toml
home/.config/nvim/: init.lua  nvim-pack-lock.json
home/.config/tmux-powerline/: config.sh
home/.config/zed/: settings.json
home/.zsh/functions/: cwt  edit-dotfiles-config  gch  git-diff-stats  git-stats  load-local-venv  sesh-sessions
homebrew/: Brewfile  Brewfile-casks  Brewfile-k8s  Brewfile-mas
nvim/: coc-settings.json  init.vim  nvim
nvim-config/: init.lua
nvim/autoload/: gocomplete.vim
ruby/: gemrc
scripts/: check-homebrew-apps.py
src/dotfiles_scripts/: symlink_home.py  utils.py
zsh/: .zshrc  p10k.zsh
