[project]
name = "dotfiles-scripts"
version = "0.1.0"
description = "Utility scripts for managing dotfiles"
readme = "README.md"
authors = [{ name = "Josh McDade", email = "josh.ncsu@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0.0", "click>=8.1.0"]

[project.scripts]
# Main entry point
dotfiles-setup = "dotfiles_scripts.setup:cli"

# Utility scripts (require rich optional dependency)
symlink-home-files = "dotfiles_scripts.symlink_home:cli"
check-homebrew-apps = "dotfiles_scripts.check_homebrew:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["dotfiles_scripts"]
