[project]
name = "dotfiles-scripts"
version = "0.1.0"
description = "Utility scripts for managing dotfiles"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0", "rich>=13.0.0", "click>=8.1.0"]

[dependency-groups]
dev = ["ruff>=0.9", "pyright>=1.1"]

[project.scripts]
# Main entry point
dotfiles-setup = "dotfiles_scripts.setup:cli"

# Individual setup scripts
setup-device-id = "dotfiles_scripts.setup_device_id:main"
setup-dropbox = "dotfiles_scripts.setup_dropbox:main"
setup-fzf = "dotfiles_scripts.setup_fzf:main"
setup-homebrew = "dotfiles_scripts.setup_homebrew:main"
setup-macos = "dotfiles_scripts.setup_macos:main"
setup-mise = "dotfiles_scripts.setup_mise:main"
setup-vim = "dotfiles_scripts.setup_vim:main"
setup-neovim = "dotfiles_scripts.setup_neovim:main"
setup-zsh = "dotfiles_scripts.setup_zsh:main"
setup-zsh-history = "dotfiles_scripts.setup_zsh_history:main"
setup-gpg = "dotfiles_scripts.setup_gpg:main"
setup-launchd = "dotfiles_scripts.setup_launchd:main"

# Utility scripts (require rich optional dependency)
symlink-home-files = "dotfiles_scripts.symlink_home:cli"
check-homebrew-apps = "dotfiles_scripts.check_homebrew:cli"
migrate-to-gdrive = "dotfiles_scripts.migrate_to_gdrive:main"
detach-cloud-cache = "dotfiles_scripts.detach_cloud_cache:main"
dotfiles-doctor = "dotfiles_scripts.dotfiles_doctor:main"
check-private-repo = "dotfiles_scripts.check_private_repo:main"
sync-private-runtime = "dotfiles_scripts.sync_private_runtime:main"
setup-private-repo = "dotfiles_scripts.setup_private_repo:main"
setup-gstack = "dotfiles_scripts.setup_gstack:cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["dotfiles_scripts"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
include = ["dotfiles_scripts"]
